
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;


 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 scalar_t__ calloc (int,int) ;
 int read (int,char*,int) ;
 scalar_t__ realloc (char*,scalar_t__) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 scalar_t__ strlen (char*) ;
 int strncat (char*,char*,scalar_t__) ;

char *socket_receive(int socket, int tout) {

 fd_set input;
 int ret, byte;
 char *buffer, *tmp;
 struct timeval timeout;

 FD_ZERO(&input);
 FD_SET(socket, &input);

 if(tout > 0) {
   timeout.tv_sec = tout;
   timeout.tv_usec = 0;
 }

 if(socket < 0) return ((void*)0);

 if(!(buffer = (char *) calloc (0, sizeof (char)))) return ((void*)0);

 while (1) {

  if(tout > 0)
   ret = select(socket + 1, &input, ((void*)0), ((void*)0), &timeout);
 else
   ret = select(socket + 1, &input, ((void*)0), ((void*)0), ((void*)0));

 if (!ret) break;
 if (ret < 0) return ((void*)0);

 if(!(tmp = (char *) calloc (1024, sizeof (char)))) return ((void*)0);

 if ((byte=read(socket, tmp, 1024)) < 0) return ((void*)0);

  if(!byte) break;

 if(!(buffer = (char *) realloc(buffer, strlen (buffer) + strlen (tmp)))) return ((void*)0);

 strncat(buffer, tmp, strlen(buffer)+strlen(tmp));

 }

 return buffer;

}
